[package]
name = "rjob"
version = "0.1.1"
edition = "2021"
authors = ["Liyan 18525589998@163.com"]
description = "A Simple Job Scheduler By Rust."
license = "Apache-2.0"
documentation = "https://docs.rs/rpush"
homepage = "https://docs.rs/rjob"
repository = "https://github.com/hi-liyan/rjob"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.1", features = ["full"] }
tokio-cron = "0.1.2"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
chrono = "0.4.24"
uuid = { version = "1.3.3", features = ["v4"] }
